--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FermCalc</title>
+    <title>VineCalc</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="icon.ico" type="image/x-ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
@@ -16,28 +17,28 @@
             <h5>КАЛЬКУЛЯТОР ДЕЛЛЕ</h5>
         </div>
         <div class="card">
-            <h5 class="card-header">Розрахунок коєфіціента Делле</h5>
+            <h6 class="card-header">Крок № 1 : Розрахунок коєфіціента Делле</h6>
             <div class="card-body">
                 <p class="desc">Визначте мінімальну концентрацію цукру та спирту,
                     необхідну для консервації вина та запобігання розвитку небажаної мікрофлори.
-                    Коефіцієнт Делле повинен бути <strong>80 або більше</strong> </p>
+                    Коефіцієнт Делле повинен бути <strong>80 або більше</strong></p>
                 <div class="mb-3">
                     <label for="sugar_id" class="form-label">Цукор, %</label>
                     <input type="number" class="form-control" id="sugar_id" value="0" min="0" max="25" step="0.5"
-                           placeholder="Вкажіть бажаний відсоток цукру" onchange="calcDellCof()">
+                           placeholder="Вкажіть бажаний відсоток цукру" oninput="calcDellCof()">
                 </div>
                 <div class="mb-3">
                     <label for="alcohol_id" class="form-label">Спирт, %</label>
                     <input type="number" class="form-control" id="alcohol_id" value="0" min="0" max="25" step="0.5"
-                           placeholder="Вкажіть бажаний відсоток спирту" onchange="calcDellCof()">
+                           placeholder="Вкажіть бажаний відсоток спирту" oninput="calcDellCof()">
                 </div>
-                <div>
-                    <h5 id="result_id">Коєфіціент : не розраховано</h5>
-                </div>
+            </div>
+            <div class="card-footer">
+                <p id="result_id">Коєфіціент : не розраховано</p>
             </div>
         </div>
         <div class="card">
-            <h5 class="card-header">Розрахунок спиртової компоненти</h5>
+            <h6 class="card-header">Крок № 2 : Розрахунок спиртової компоненти</h6>
             <div class="card-body">
                 <p class="desc">Додайте показники цукристості виноматеріалу, його кількість та міцність алкоголю,
                     яким плануєте стабілізувати вино</p>
@@ -53,17 +54,19 @@
                 </div>
                 <div class="mb-3">
                     <label for="alcohol-blend_id" class="form-label">Міцність спирту, % об.</label>
-                    <input type="number" class="form-control" id="alcohol-blend_id"value="0"  min="40" max="100" step="0.5"
+                    <input type="number" class="form-control" id="alcohol-blend_id" value="0" min="40" max="100"
+                           step="0.5"
                            placeholder="Фактична міцність спирту">
                 </div>
-                <div>
-                    <h5 id="total_id">Необхідно додати : не розраховано</h5>
-                </div>
+                <div id="liveAlertPlaceholder"></div>
+            </div>
+            <div class="card-footer">
+                <p id="total_id">Кількість спирту : не розраховано</p>
             </div>
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-            <button class="btn btn-secondary me-md-2" type="button" onclick="resetAll()">Clear</button>
-            <button class="btn btn-primary" type="button" onclick="calcAlcohol()">Розрахувати</button>
+            <button class="btn btn-secondary" type="button" onclick="resetAll()">Clear</button>
+            <button class="btn btn-success" type="button" onclick="calcAlcohol()">Розрахувати</button>
         </div>
     </form>
 </div>
