--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     необхідну для консервації вина та запобігання розвитку небажаної мікрофлори.
                     Коефіцієнт Делле повинен бути <strong>80 або більше</strong></p>
                 <div class="mb-3">
-                    <label for="sugar_id" class="form-label">Цукор, %</label>
+                    <label for="sugar_id" class="form-label">Цукор, % мас.</label>
                     <input type="number" class="form-control" id="sugar_id" value="0" min="0" max="25" step="0.5"
                            placeholder="Вкажіть бажаний відсоток цукру" oninput="calcDellCof()">
                 </div>
                 <div class="mb-3">
-                    <label for="alcohol_id" class="form-label">Спирт, %</label>
+                    <label for="alcohol_id" class="form-label">Спирт, % об.</label>
                     <input type="number" class="form-control" id="alcohol_id" value="0" min="0" max="25" step="0.5"
                            placeholder="Вкажіть бажаний відсоток спирту" oninput="calcDellCof()">
                 </div>
@@ -43,7 +43,7 @@
                 <p class="desc">Додайте показники цукристості виноматеріалу, його кількість та міцність алкоголю,
                     яким плануєте стабілізувати вино</p>
                 <div class="mb-3">
-                    <label for="sugar-vine_id" class="form-label">Цукор у виноматеріалі, гр/100см3</label>
+                    <label for="sugar-vine_id" class="form-label">Цукор у виноматеріалі, гр/100мл.</label>
                     <input type="number" class="form-control" id="sugar-vine_id" value="0" min="15" max="35" step="0.5"
                            placeholder="Фактичне значення цукру у виноматеріалі">
                 </div>
