--- a/index.html
+++ b/index.html
@@ -45,18 +45,17 @@
                 <div class="mb-3">
                     <label for="sugar-vine_id" class="form-label">Цукор у виноматеріалі, гр/100мл.</label>
                     <input type="number" class="form-control" id="sugar-vine_id" value="0" min="15" max="35" step="0.5"
-                           placeholder="Фактичне значення цукру у виноматеріалі">
+                           placeholder="Фактичне значення цукру у виноматеріалі" oninput="resetResult()">
                 </div>
                 <div class="mb-3">
                     <label for="amount-wine_id" class="form-label">Кількість виноматеріалу, л</label>
                     <input type="number" class="form-control" id="amount-wine_id" value="0" min="1" max="500" step="5"
-                           placeholder="Фактична кількість виноматеріалу">
+                           placeholder="Фактична кількість виноматеріалу" oninput="resetResult()">
                 </div>
                 <div class="mb-3">
                     <label for="alcohol-blend_id" class="form-label">Міцність спирту, % об.</label>
                     <input type="number" class="form-control" id="alcohol-blend_id" value="0" min="40" max="100"
-                           step="0.5"
-                           placeholder="Фактична міцність спирту">
+                           step="0.5" placeholder="Фактична міцність спирту" oninput="resetResult()">
                 </div>
                 <div id="liveAlertPlaceholder"></div>
             </div>
