--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                     data-bs-target="#flush-collapseOne"
                                     aria-expanded="false"
                                     aria-controls="flush-collapseOne">
-                                <strong>КРОК № 1</strong> : Параметри, яких необхідно досягти
+                                <strong>КРОК № 1</strong> : Правило Делле
                             </button>
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionId">
@@ -212,10 +212,10 @@
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="amount-wine_id" class="form-label">Початковій об'єм сусла, л</label>
+                                    <label for="amount-wine_id" class="form-label">Початковий об'єм сусла, л</label>
                                     <input type="number" class="form-control" id="amount-wine_id"
                                            value="0" min="1" max="500" step="5"
-                                           placeholder="Початковій об'єм" oninput="resetResult()">
+                                           placeholder="Початковий об'єм" oninput="resetResult()">
                                 </div>
 
                                 <div class="mb-3">
@@ -252,7 +252,7 @@
                                 <p class="desc">Результат перераховується <strong>автоматично</strong> при внесенні змін
                                     у початкові дані, а також у параметри, яких необхідно досягти.
                                 </p>
-                                <div id="resultBox" class="alert alert-secondary">Заповніть кроки 1 и 2</div>
+                                <div id="resultBox" class="alert alert-secondary">Заповніть кроки 1 та 2</div>
                                 <div id="liveAlertPlaceholder"></div>
                             </div>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-center">
