--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="accordion-body">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">
-                                    <p class="desc"><strong>Одиниця вимирювання</strong> для початкових параметрів
+                                    <p class="desc"><strong>Одиниця вимірювання</strong> для початкових параметрів
                                         сусла</p>
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="radioDefault"
