--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                                 включаючи тверді частини, які залишились після пресування.<br>
                                 <strong>Цукристість</strong> - це показник вмісту розчинних твердих речовин у
                                 винограді, в основному у вигляді сахарози, виражений у г/100см<sup>3</sup>.<br>
-                                <strong>Густина</strong> - це відношення маси сухих речовин (в основному цукрів)
-                                до об'єму сусла, виражене у г/л<br>
+                                <strong>Густина</strong> - це відношення маси сусла до його об'єму, виражене у г/л<br>
                                 <strong>Спиртуозність</strong> - це відсоткове співвідношення спирту
                                 (етилового) до загального об'єму рідини.<br>
                                 <strong>Спиртовмісний матеріал (AM)</strong> – це будь-який матеріал, що містить
