--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                                                         <div id="flush-collapseTerminology"
                                                              class="accordion-collapse collapse"
                                                              data-bs-parent="#accordionFlushTerminology">
-                                                            <div class="accordion-body">
-                                                                <p class="terminology">
+                                                            <div>
+                                                                <p class="terminology mt-3">
                                                                     <strong>Консервуюча одиниця Делле (CU)</strong> - це
                                                                     число, що показує
                                                                     рівень
@@ -164,7 +164,7 @@
                                                         </h2>
                                                         <div id="flush-collapseFive" class="accordion-collapse collapse"
                                                              data-bs-parent="#accordionFlushTerminology">
-                                                            <div class="accordion-body">
+                                                            <div class="mt-3">
                                                                 <ul class="list-group list-group-flush">
                                                                     <li class="list-group-item">
                                                                         <p class="desc"><strong>Одиниця
@@ -262,7 +262,7 @@
                                                             <div id="flush-collapseOne"
                                                                  class="accordion-collapse collapse"
                                                                  data-bs-parent="#accordionId">
-                                                                <div class="accordion-body">
+                                                                <div class="mt-3">
                                                                     <p class="desc">Визначте концентрацію цукру та
                                                                         спирту у майбутньому
                                                                         вині.
@@ -319,17 +319,14 @@
                                                             <div id="flush-collapseTwo"
                                                                  class="accordion-collapse collapse"
                                                                  data-bs-parent="#accordionId">
-                                                                <div class="accordion-body">
+                                                                <div class="mt-3">
                                                                     <div id="wortParameter_id">
                                                                         <div id="parameter_id">
                                                                             <p class="desc">Додайте показники
                                                                                 цукристості сусла, його об'єм
-                                                                                та
-                                                                                спиртуозність <strong>спиртовмісного
-                                                                                    матеріалу</strong>
-                                                                                (далі
-                                                                                AМ)
-                                                                                , яким плануєте проводити стабілізацію
+                                                                                та спиртуозність <strong>спиртовмісного
+                                                                                    матеріалу</strong>(далі AМ),
+                                                                                яким плануєте проводити стабілізацію
                                                                             </p>
                                                                             <div class="mb-3">
                                                                                 <label for="S0" class="form-label">Початкова
@@ -399,11 +396,9 @@
                                                             <div id="flush-collapseFour"
                                                                  class="accordion-collapse collapse"
                                                                  data-bs-parent="#accordionId">
-                                                                <div class="accordion-body">
+                                                                <div class="mt-3">
                                                                     <p class="desc">Результат перераховується <strong>автоматично</strong>
-                                                                        при
-                                                                        внесенні змін
-                                                                        у початкові дані, а також у параметри, яких
+                                                                        при внесенні змін у початкові дані, а також у параметри, яких
                                                                         необхідно досягти.
                                                                     </p>
                                                                     <div id="resultBox" class="alert alert-secondary">
@@ -508,8 +503,8 @@
                                     </h2>
                                     <div id="flush-collapseTabOne" class="accordion-collapse collapse"
                                          data-bs-parent="#accordion2Id">
-                                        <div class="accordion-body">
-                                            <p>Метод заснований на пропорційній <b>залежності густини сусла від
+                                        <div class="mt-3">
+                                            <p class="px-3">Метод заснований на пропорційній <b>залежності густини сусла від
                                                 вмісту в
                                                 ньому твердих речовин</b> (в тому числі цукрів).</p>
                                             <p class="desc ta-c"><b>Межі діапазону густин</b></p>
@@ -613,8 +608,8 @@
                                     </h2>
                                     <div id="flush-collapseTabTwo" class="accordion-collapse collapse"
                                          data-bs-parent="#accordion2Id">
-                                        <div class="accordion-body">
-                                            <p>Метод заснований на визначенні відносної густини сусла до та під час
+                                        <div class="mt-3">
+                                            <p class="px-3">Метод заснований на визначенні відносної густини сусла до та під час
                                                 бродіння. Таким чином визначають <b>кількість
                                                     утвореного спирту та незброджених цукрів</b>.</p>
                                             <div class="mb-3">
