--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                                                     розчинних твердих
                                                                     речовин
                                                                     у
-                                                                    винограді, в основному у вигляді сахарози, виражений
+                                                                    винограді або суслі, в основному у вигляді сахарози, виражений
                                                                     у
                                                                     г/100см<sup>3</sup>.<br>
                                                                     <strong>Густина</strong> - це відношення маси сусла
@@ -498,7 +498,7 @@
                                                 data-bs-target="#flush-collapseTabOne"
                                                 aria-expanded="false"
                                                 aria-controls="flush-collapseTabOne">
-                                            <b>ТАБЛ. №1</b>&nbsp;Визначення цукру у виноградному суслі
+                                            <b>ТАБЛ. №1</b>&nbsp;Визначення початкової цукристості сусла
                                         </button>
                                     </h2>
                                     <div id="flush-collapseTabOne" class="accordion-collapse collapse"
@@ -611,7 +611,7 @@
                                         <div class="mt-3">
                                             <p class="px-3">Метод заснований на визначенні відносної густини сусла до та під час
                                                 бродіння. Таким чином визначають <b>кількість
-                                                    утвореного спирту та незброджених цукрів</b>.</p>
+                                                    утвореного спирту та залишкових цукрів</b>.</p>
                                             <div class="mb-3">
                                                 <label for="D_start" class="form-label">Початкова густина сусла
                                                     <code>
