--- a/index.html
+++ b/index.html
@@ -611,12 +611,13 @@
                                         <div class="mt-3">
                                             <p class="px-3">Метод заснований на визначенні відносної густини сусла до та під час
                                                 бродіння. Таким чином визначають <b>кількість
-                                                    утвореного спирту та залишкових цукрів</b>.</p>
+                                                    утвореного спирту та залишкових цукрів</b>.
+                                                Таблиця відтворює покроковий процес бродіння.</p>
                                             <div class="mb-3">
                                                 <label for="D_start" class="form-label">Початкова густина сусла
                                                     <code>
                                                         (D0)</code>, г/л</label>
-                                                <input type="number" class="form-control" id="D_start"
+                                                <input type="number" class="form-control int-only" id="D_start"
                                                        value="0" min="1020" max="1150" step="5"
                                                        placeholder="Вкажіть початкову густину"
                                                        oninput="genSpiritTable()">
