--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                                                 <div class="mt-3">
                                                                     <div id="wortParameter_id">
                                                                         <div id="parameter_id">
-                                                                            <p class="desc">Додайте показники
+                                                                            <p class="desc" id="adviceId">Додайте показники
                                                                                 цукристості сусла, його об'єм
                                                                                 та спиртуозність спиртовмісного
                                                                                 матеріалу (далі AМ),
@@ -295,7 +295,7 @@
                                                                                 </p>
                                                                                 <div class="row mt-2">
                                                                                     <div class="mb-3 col-sm-6">
-                                                                                        <label for="S0"
+                                                                                        <label for="S0" id="lblStatSugar"
                                                                                                class="form-label">Початкова
                                                                                             цукристість<code>
                                                                                                 (S0)</code>,
@@ -304,9 +304,7 @@
                                                                                                class="form-control"
                                                                                                id="S0"
                                                                                                name="S0Name"
-                                                                                               value="0" min="15"
-                                                                                               max="35"
-                                                                                               step="0.5"
+                                                                                               value="0"
                                                                                                placeholder="Початкова цукристість"
                                                                                                oninput="resetResult()">
                                                                                     </div>
@@ -330,7 +328,7 @@
 
                                                                             <div class="card-custom my-3 p-3">
                                                                                 <p class="desc"><b>Параметри
-                                                                                    спиртовмісного матеріалу</b></p>
+                                                                                    спиртовмістного матеріалу</b></p>
                                                                                 <div class="row mt-2">
                                                                                     <div class="mb-3 col-sm-6">
                                                                                         <label for="As"
