--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
                                                                             <div class="card-custom my-3 p-3">
                                                                                 <p class="desc"><b>Параметри
-                                                                                    спиртовмістного матеріалу</b></p>
+                                                                                    спиртовмісного матеріалу</b></p>
                                                                                 <div class="row mt-2">
                                                                                     <div class="mb-3 col-sm-6">
                                                                                         <label for="As"
