--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
                                 <div id="explanations" class="accordion-collapse collapse"
                                      data-bs-parent="#accordionHelp">
                                     <div>
-                                        <p class="terminology m-t-20"><b>Абсолютним показником заломлення (n)</b><br> Це
+                                        <p class="terminology m-t-20"><b>Абсолютний показник заломлення (n)</b><br> Це
                                             відношення швидкості проходження світла у вакуумі до швидкості проходження
                                             світла в речовині, що досліджується. На практиці визначають <b>відносний
                                                 показник заломлення</b> - відношення швидкості проходження світла в
